# Zynq-Fast-Api-Code

./: README.md  batch_tag_generator.py  main.py  pyproject.toml  search.py  tag_entity.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: search.py  tags.py
app/core/: config.py  env.py
app/schemas/: search.py  tags.py
