[project]
name = "zynq-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.112.0",
    "fastapi>=0.138.0",
    "mysql>=0.0.3",
    "mysql-connector-python>=9.7.0",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
